@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Adds Hot-key support for auto-crop enable/disable/toggle.
     Adds detached start mode.
     Fix bug: VDPAU looses preemption callback.
     Fix bug: X11 server keeps sending USR1 signals, which confuses suspend.
